changed #orders-container to be a form.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
         </div>
         <h2 class="section-title">Orders</h2>
-        <div class="row" id="orders-container">
+        <form action="" class="row" id="orders-container">
           <div class="col-xs-12 col-md-4 col-lg-3 drink-container" data-ingredients='[{"ingredient":"vodka","units":2,"measurement":"ml"},{"ingredient":"bloody mary mix","units":4,"measurement":"ml"},{"ingredient":"celery stalk","units":1,"measurement":"dry"}]' data-available="true" data-drink="bloody mary">
             <div class="drink-title">
               <h3>Bloody Mary</h3>
@@ -280,7 +280,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </form>
         <div class="row" id="place-order">
           <div class="col-xs-12">
             <button type="submit" class="btn btn-purple disabled" id="submit-order">Place Order</button>
